feat: add rest endpoint for kanban's statuses subcollection
